--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.34.0
-streamlit-webrtc==0.45.0
-ultralytics==8.1.25
-opencv-python-headless==4.9.0.80
-numpy==1.26.4
-av==10.0.0
+streamlit
+ultralytics
+opencv-python
+numpy
+
